--- a/about.html
+++ b/about.html
@@ -6,9 +6,10 @@
 <title>About — VerseFinder</title>
 <link rel="stylesheet" href="style.css" />
 <style>
-  /* Gold color for specific message */
+  /* Soft gold color for specific message */
   .gold-text {
-    color: #d4af37;
+      color: #bfa243; /* soft, readable gold */
+      font-weight: 500; /* slightly bolder for readability */
   }
 </style>
 </head>
@@ -37,18 +38,17 @@
 </div>
 
 <script>
-  // Fetch content from content.json and wrap it in gold-text class
-  fetch('content.json')
-    .then(response => response.json())
-    .then(data => {
-        // Use the correct key "about"
-        const text = data.about || "About content not available.";
-        document.getElementById('about-text').innerHTML = `<span class="gold-text">${text}</span>`;
-    })
-    .catch(err => {
-        document.getElementById('about-text').innerText = "Failed to load content.";
-        console.error(err);
-    });
+fetch('content.json')
+  .then(response => response.json())
+  .then(data => {
+      const text = data.about || "About content not available.";
+      const formattedText = text.replace(/\n/g, '<br>'); // preserve line breaks
+      document.getElementById('about-text').innerHTML = `<span class="gold-text">${formattedText}</span>`;
+  })
+  .catch(err => {
+      document.getElementById('about-text').innerText = "Failed to load content.";
+      console.error(err);
+  });
 </script>
 </body>
 </html>
