--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>VerseFinder</title>
 <link rel="stylesheet" href="style.css" />
-<style>
-  /* Only target specific texts */
-  .hero .small,      /* "Type any part of a verse..." */
-  .footer .small,    /* "May the Word guide you." */
-  .header .brand .small { /* "Find Bible verses from any fragment" */
-    color: #d4af37; /* Gold color */
-  }
-</style>
 </head>
 <body>
 <div class="container">
@@ -29,10 +21,13 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
+
   <main>
     <section class="hero">
       <h1 style="margin:0">Find Bible verses by text</h1>
-      <p class="small" style="margin-top:8px">Type any part of a verse (even just the ending words) and press Search.</p>
+      <p class="small gold-text" style="margin-top:8px">
+        Type any part of a verse (even just the ending words) and press Search.
+      </p>
       <form id="search-form" class="search-box" style="margin-top:18px">
         <input id="search-input" class="search" placeholder="Type verse fragment (e.g. 'everlasting life')" />
         <button id="search-btn" class="btn" type="button">Search</button>
@@ -40,10 +35,12 @@
       <div id="results" class="results" style="margin-top:18px"></div>
     </section>
   </main>
+
   <footer class="footer">
-    <div id="footer-verse" class="small">May the Word guide you.</div>
+    <div id="footer-verse" class="small gold-text">May the Word guide you.</div>
   </footer>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
 <script src="script.js"></script>
 </body>
